Bug 813817 - Canceling file transferring doesn't clear the notifications. r=echou, a=blocking-basecamp